added create and detail view to dog view

--- a/DogGo/Views/Shared/_Layout.cshtml
+++ b/DogGo/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="walkers" asp-action="Index">Walkers</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="dogs" asp-action="Index">Doggies</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="owners" asp-action="Index">Owners</a>
                         </li>
                         <li class="nav-item">
