--- a/DogGo/Views/Walkers/Index.cshtml
+++ b/DogGo/Views/Walkers/Index.cshtml
@@ -39,8 +39,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.NeighborhoodId)
             </td>
-            <td>
-                <img src="@item.ImageUrl" alt="avatar" />
+            <td style="max-height:10px; max-width:10px;">
+                <img src="@item.ImageUrl" alt="avatar"  />
                 
             </td>
             <td>
