--- a/DogGo/wwwroot/css/site.css
+++ b/DogGo/wwwroot/css/site.css
@@ -69,3 +69,13 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+/*---------------Images--------------*/
+
+.profile {
+    max-height: 15rem;
+    max-width: 15rem;
+    border-radius: 2rem;
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
