--- a/DogGo/Views/Walkers/Details.cshtml
+++ b/DogGo/Views/Walkers/Details.cshtml
@@ -1,42 +1,62 @@
-﻿@model DogGo.Models.Walker
+﻿@model DogGo.Models.ViewModels.WalkerProfileViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
-
-<h1>Details</h1>
-
+@{ ViewData["Title"] = "Profile"; }
 <div>
-    <h4>Walker</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NeighborhoodId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NeighborhoodId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            <img class="bg-info" src="@Model.ImageUrl" alt="avatar" />
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <h1 class="mb-4">Walker Profile</h1>
+
+    <section class="container">
+        <img src="@Model.Walker.ImageUrl" alt="avatar" class="profile" />
+        <div>
+            <label class="font-weight-bold">Neighborhood:</label>
+            <span>@Model.Neighborhood.Name</span>
+        </div>
+    </section>
+
+    <hr class="mt-5" />
+    <div class="clearfix"></div>
+
+    <div class="row">
+        
+        <section class="col-lg-4 col-md-8 container mt-5">
+            <h1>Recent Walks</h1>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            Date
+                        </th>
+                        <th>
+                            Client
+                        </th>
+                        <th>
+                            Duration
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (Walk walk in Model.Walks)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => @walk.Date)
+                            </td>
+                            <td>
+                                @foreach (Owner owner in Model.Owners)
+                                {
+                                    @Html.DisplayFor(modelItem => owner.Name)
+                                }
+                            </td>
+                            <td>
+                                @(walk.Duration / 60) min
+                            </td>
+                        
+                        </tr>
+                    }
+
+                </tbody>
+
+            </table>
+        </section>
+    </div>
 </div>
